--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -90,7 +90,7 @@
             pointer-events: none;
             right: 0;
             z-index: -1;
-            background-color: rgba(darken(#3498db, 40%), 0.75);
+            background-color: rgba(darken($main, 40%), 0.75);
             opacity: 0;
             transition: opacity 0.5s cubic-bezier(0.19, 1, 0.22, 1);
         }
@@ -338,8 +338,8 @@
 
 // --------- Ways ----------
 .ways {
-    padding-top: 100px;
-    padding-bottom: 70px;
+    margin-top: 100px;
+    padding-bottom: 150px;
     position: relative;
     .prev {
         top: -3px;
@@ -351,7 +351,7 @@
         right: 50px;
     }
     .back-text {
-        top: 40px;
+        top: -20px;
         left: 20px;
     }
     .ways__item {
@@ -376,7 +376,7 @@
     }
     .ways__items {
         .slick-track {
-            padding: 120px 0;
+            padding: 100px 0px;
         }
     }
     .ways__item:nth-child(odd) {
@@ -1028,7 +1028,7 @@
 // --------- Footer ----------
 .footer {
     margin-top: 150px;
-    background-image: url(../img/bg--contact.jpg);
+    background-image: url(../img/bg--footer.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -1042,7 +1042,6 @@
         align-items: center;
         justify-content: center;
         border-top: 0.5px solid rgba(#bbb, 0.4);
-        // background-color: rgba(0, 0, 0, 0.15);
         padding: 15px;
     }
     .footer__list .menu__list-item a {
@@ -1079,8 +1078,8 @@
             justify-content: space-between;
         }
     }
-    .contact.wrapper::after {
-        background-color: rgba(#000, 0.5);
+    &.wrapper::after {
+        background: rgba(#000, 0.6);
     }
     .contact__welcome {
         text-align: center;
@@ -1094,8 +1093,7 @@
         font-weight: 700;
         font-size: 48px;
         line-height: 56px;
-        padding-bottom: 10px;
-        // margin-bottom: 10px;
+        margin-bottom: 10px;
         &::after {
             top: auto;
             bottom: 0;
