--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1064,6 +1064,10 @@
         justify-content: center;
         background-color: #000;
         padding: 10px;
+        b {
+            padding-left: 5px;
+            font-weight: 700;
+        }
     }
 
     .contact {
